--- a/ui/fsdetails.ui
+++ b/ui/fsdetails.ui
@@ -56,6 +56,7 @@
           <object class="GtkComboBox" id="fs-mode-combo">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
+            <signal name="changed" handler="on_fs_mode_combo_changed" swapped="no"/>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -129,6 +130,7 @@
           <object class="GtkComboBox" id="fs-wrpolicy-combo">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
+            <signal name="changed" handler="on_fs_wrpolicy_combo_changed" swapped="no"/>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -162,6 +164,7 @@
         <property name="visible">True</property>
         <property name="can_focus">True</property>
         <property name="invisible_char">●</property>
+        <signal name="changed" handler="on_fs_target_changed" swapped="no"/>
       </object>
       <packing>
         <property name="left_attach">1</property>
@@ -179,6 +182,7 @@
         <property name="use_underline">True</property>
         <property name="xalign">0.5</property>
         <property name="draw_indicator">True</property>
+        <signal name="toggled" handler="on_fs_readonly_toggled" swapped="no"/>
       </object>
       <packing>
         <property name="left_attach">1</property>
@@ -197,6 +201,7 @@
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="invisible_char">●</property>
+            <signal name="changed" handler="on_fs_source_changed" swapped="no"/>
           </object>
           <packing>
             <property name="expand">True</property>
@@ -366,6 +371,7 @@
             <property name="xalign">1</property>
             <property name="adjustment">adjustment6</property>
             <property name="climb_rate">1</property>
+            <signal name="changed" handler="on_fs_ram_source_changed" swapped="no"/>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -417,6 +423,7 @@
           <object class="GtkComboBox" id="fs-format-combo">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
+            <signal name="changed" handler="on_fs_format_combo_changed" swapped="no"/>
           </object>
           <packing>
             <property name="expand">False</property>
